examples/errors/var_redeclaration.olang
Program: Main()

class Main is
    this() is
       var a : Integer
       a := Integer(10)

       var a: Real
       a := Real(10.0)
    end
end